[project]
name = "prview"
version = "0.1.0"
description = "Web-based file-by-file PR review"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[project.scripts]
prview = "prview.launcher:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prview"]

[tool.pytest.ini_options]
testpaths = ["tests"]
