[project]
name = "prview"
version = "0.1.0"
description = "Web-based file-by-file PR review"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[project.scripts]
prview = "prview.launcher:main"

# Dev tools as a uv dependency group: auto-installed by `uv sync` / `uv run`, so
# `uv run pytest` works without a `--extra dev` flag (an optional-dependencies
# extra gets pruned on a plain sync).
[dependency-groups]
dev = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prview"]

[tool.pytest.ini_options]
testpaths = ["tests"]
